# OPP

./: CMakeLists.txt  README.md  win_privkey.ppk
lab1/: CMakeLists.txt  MPI.doc  README.md  collective.cpp  points.cpp  simple.cpp
lab2/: CMakeLists.txt  README.md  lab2.docx  slauMPI.cpp
lab2/report/: opp_pract2_22204_Klochikhina.docx
lab2/script/: mpi.sbatch
lab2/scripts/: slau.sbatch
lab3/: CMakeLists.txt  README.md  lab3.docx  omp.sbatch  schedule.cpp  schedule.sbatch  slau.cpp  slauOMP.cpp
lab3/report/: opp_pract3_22204_Klochikhina.docx
lab3/script/: omp.sbatch
lab4/: MatrixMul.cpp  README.md
lab4/report/: opp_pract4_22204_Klochikhina.docx
lab4/script/: matrixMul.sbatch
lab5/: README.md  life.cpp
lab5/report/: opp_pract5_22204_Klochikhina.docx
lab5/script/: life.sbatch
lab6/: README.md  posix.cpp
lab6/report/: opp_pract6_22204_Klochikhina.docx
lab6/script/: posix.sbatch
